tree-sitter-harn/grammar.js
    source_file: ($) => topLevelSeparated($, $._top_level_item),

    _top_level_item: ($) =>
      choice(
        $.attributed_declaration,
        $.pipeline_declaration,
        $.import_declaration,
        $._statement
      ),

    // Attributes: `@name` or `@name(arg, key: value)`. Stack on the
    // declaration that follows. Mirrors the parser in
    // crates/harn-parser/src/parser.rs (parse_attributed_decl), whose
    // `skip_newlines()` swallows any run of newlines between an attribute and
    // the declaration it decorates.
    //
    // `repeat($._line_sep)` (not `optional`) is required because a comment
    // between the attribute and the declaration (e.g. a doc comment:
    // `@complexity(allow)` / `/** ... */` / `pub fn`) is lexed as an `extras`
    // node sandwiched between TWO separators — the newline after the attribute
    // and the newline after the comment. `optional` only consumed the first,
    // leaving the second to error out before the declaration. The canonical
    // lexer treats comments as trivia, so this construct is valid Harn.
    attributed_declaration: ($) =>
      seq(
        repeat1(seq($.attribute, repeat($._line_sep))),
        choice(
          $.pipeline_declaration,
          $.fn_declaration,
          $.tool_declaration,
          $.skill_declaration,
          $.eval_pack_declaration,
          $.struct_declaration,
          $.enum_declaration,
          $.type_declaration,
          $.interface_declaration,
          $.impl_block
        )
      ),

    attribute: ($) =>
      seq(
        "@",
        field("name", attributeIdentifier($)),
        optional(seq(
          "(",
          optional(commaSep1($.attribute_arg)),
          optional(","),
          ")"
        ))
      ),

    attribute_arg: ($) =>
      choice(
        seq(field("name", attributeIdentifier($)), ":", field("value", $._attribute_value)),
        $._attribute_value
      ),

    // Attribute values mirror the deliberately non-evaluating subset
    // accepted by `parse_attribute_value` in the runtime parser
    // (crates/harn-parser/src/parser/decls.rs): scalar literals, lists,
    // dicts, dotted identifiers used as sentinels (e.g.
    // `github.pr_opened`), and simple call-shaped sentinels such as
    // `schedule("*/30 * * * *")`. Negative integers are also allowed
    // as a single attribute scalar.
    _attribute_value: ($) =>
      choice(
        $.string_literal,
        $.raw_string_literal,
        $.integer_literal,
        $.float_literal,
        $.true,
        $.false,
        $.nil,
        $.list_literal,
        $.dict_literal,
        $.attribute_call,
        $.attribute_path,
        $.identifier,
        seq("-", $.integer_literal)
      ),

    // Dotted-identifier sentinel used in attribute values, e.g.
    // `github.pr_opened`. This intentionally does not extend into
    // `property_access` (which carries _expression on the LHS) because
    // attribute values are syntactically restricted to the literal
    // grammar above.
    attribute_path: ($) =>
      seq($.identifier, repeat1(seq(".", $.identifier))),

    // Call-shaped sentinel used in attribute values, e.g.
    // `schedule("*/30 * * * *")`. Uses a recursive subset of attribute
    // values for arguments to keep the surface aligned with the runtime
    // parser's `parse_attribute_value` recursion.
    attribute_call: ($) =>
      seq(
        choice($.attribute_path, $.identifier),
        "(",
        optional(commaSep1($.attribute_arg)),
        optional(","),
        ")"
      ),

    _newline: (_) => "\n",

    // --- Comments ---

    comment: (_) =>
      token(
        choice(
          seq("//", /[^\n]*/),
          // Shebang line. Lexer only honors at offset 0, but for editor
          // highlighting we accept it anywhere (false positives are harmless).
          seq("#!", /[^\n]*/),
          // Block comments, supports one level of nesting
          seq(
            "/*",
            /[^*]*\*+([^/*][^*]*\*+)*/,
            "/"
          ),
          seq(
            "/*",
            repeat(choice(
              /[^/*]/,
              seq("/", /[^*]/),
              seq("*", /[^/]/),
              seq("/*", /[^*]*\*+([^/*][^*]*\*+)*/, "/")
            )),
            "*/"
          )
        )
      ),

    // --- Top-level declarations ---

    pipeline_declaration: ($) =>
      seq(
        optional("pub"),
        "pipeline",
        field("name", $.identifier),
        "(",
        parameterList($),
        ")",
        optional(seq("->", field("return_type", $.type_annotation))),
        optional(seq("throws", field("throws", $.type_annotation))),
        optional(seq("extends", field("parent", $.identifier))),
        $.block
      ),

    _statement: ($) =>
      choice(
        $.let_binding,
        $.const_binding,
        $.var_binding,
        $.if_statement,
        $.for_statement,
        $.while_statement,
        $.match_statement,
        $.retry_statement,
        $.cost_route_block,
        $.return_statement,
        $.throw_statement,
        $.fn_declaration,
        $.tool_declaration,
        $.skill_declaration,
        $.eval_pack_declaration,
        $.override_declaration,
        $.enum_declaration,
        $.struct_declaration,
        $.impl_block,
        $.interface_declaration,
        $.type_declaration,
        $.parallel_expression,
        $.parallel_each_expression,
        $.parallel_settle_expression,
        $.defer_statement,
        $.deadline_block,
        $.guard_statement,
        $.require_statement,
        $.mutex_block,
        $.scope_block,
        $.block_statement,
        $.select_block,
        $.break_statement,
        $.continue_statement,
        $.yield_expression,
        $.emit_expression,
        $.assignment,
        $.compound_assignment,
        $.expression_statement
      ),

    expression_statement: ($) => prec(1, $._expression),

    let_binding: ($) =>
      seq(
        optional("pub"),
        "let",
        field("name", $._binding_pattern),
        optional(seq(":", field("type", $.type_annotation))),
        "=",
        repeat(lineBreak($)),
        field("value", $._expression)
      ),

    var_binding: ($) =>
      seq(
        "var",
        field("name", $._binding_pattern),
        optional(seq(":", field("type", $.type_annotation))),
        "=",
        repeat(lineBreak($)),
        field("value", $._expression)
      ),

    // Immutable binding (`const PATTERN [: Type] = EXPR`). The default,
    // immutable binding form; when the initializer is in the pure const-eval
    // subset over a plain identifier it is folded at compile time. A
    // destructuring pattern is permitted (only identifier bindings fold).
    const_binding: ($) =>
      seq(
        optional("pub"),
        "const",
        field("name", $._binding_pattern),
        optional(seq(":", field("type", $.type_annotation))),
        "=",
        repeat(lineBreak($)),
        field("value", $._expression)
      ),

    _binding_pattern: ($) =>
      choice(
        $.identifier,
        $.dict_pattern,
        $.list_pattern,
        $.pair_pattern
      ),

    assignment: ($) =>
      prec.right(seq(
        field("target", choice(
          $._value_identifier,
          $.property_access,
          $.subscript_expression
        )),
        "=",
        field("value", $._expression)
      )),

    compound_assignment: ($) =>
      prec.right(seq(
        field("target", choice(
          $._value_identifier,
          $.property_access,
          $.subscript_expression
        )),
        field("operator", choice("+=", "-=", "*=", "/=", "%=")),
        field("value", $._expression)
      )),

    if_statement: ($) =>
      prec.right(seq(
        "if",
        field("condition", $._expression),
        field("consequence", $.block),
        optional(seq("else", choice($.if_statement, $.block)))
      )),

    for_statement: ($) =>
      seq(
        "for",
        field("variable", $._binding_pattern),
        "in",
        field("iterable", $._expression),
        field("body", $.block)
      ),

    while_statement: ($) =>
      seq("while", field("condition", $._expression), field("body", $.block)),

    return_statement: ($) => prec.right(seq("return", optional($._expression))),

    scope_block: ($) =>
      seq("scope", field("body", $.block)),

    emit_expression: ($) =>
      prec.right(seq("emit", $._expression)),

    fn_declaration: ($) =>
      seq(
        optional("pub"),
        optional("gen"),
        "fn",
        field("name", $.identifier),
        optional($.generic_params),
        "(",
        parameterList($),
        ")",
        optional(choice(
          prec(2, seq("->", $.type_predicate)),
          prec(1, seq("->", $.type_annotation))
        )),
        optional(seq("throws", field("throws", $.type_annotation))),
        optional($.where_clause),
        field("body", $.block)
      ),

    tool_declaration: ($) =>
      seq(
        optional("pub"),
        "tool",
        field("name", $.identifier),
        "(",
        parameterList($),
        ")",
        optional(seq("->", $.type_annotation)),
        optional(seq("throws", field("throws", $.type_annotation))),
        "{",
        statementSeparated($, choice($.tool_description, $._statement)),
        "}"
      ),

    tool_description: ($) =>
      seq("description", $.string_literal),

    skill_declaration: ($) =>
      seq(
        optional("pub"),
        "skill",
        field("name", $.identifier),
        "{",
        statementSeparated(
          $,
          seq(
            field("field_name", $.identifier),
            field("field_value", $._expression)
          )
        ),
        "}"
      ),

    eval_pack_declaration: ($) =>
      seq(
        optional("pub"),
        "eval_pack",
        choice(
          seq(field("name", $.identifier), optional(field("id", $.string_literal))),
          field("id", $.string_literal)
        ),
        "{",
        statementSeparated(
          $,
          choice(
            seq(field("field_name", $.identifier), ":", field("field_value", $._expression)),
            seq("summarize", $.block),
            $._statement
          )
        ),
        "}"
      ),

    type_arguments: ($) =>
      seq(alias(token.immediate("<"), "<"), commaSep1($.type_annotation), ">"),

    type_declaration: ($) =>
      seq(
        optional("pub"),
        "type",
        field("name", $.identifier),
        optional($.generic_params),
        "=",
        field("type", $.type_annotation)
      ),

    _expression: ($) =>
      choice(
        $.pipe_expression,
        $.ternary_expression,
        $.nil_coalescing_expression,
        $.binary_expression,
        $.range_expression,
        $.unary_expression,
        $.call_expression,
        $.generic_call_expression,
        $.method_call,
        $.subscript_expression,
        $.property_access,
        $.slice_expression,
        $.try_unwrap_expression,
        $.non_null_expression,
        $.parenthesized_expression,
        $.spawn_expression,
        $.try_expression,
        $.try_star_expression,
        $.deadline_block,
        $.parallel_expression,
        $.parallel_each_expression,
        $.parallel_settle_expression,
        $.if_statement,
        $.retry_statement,
        $.cost_route_block,
        $.match_statement,
        // Struct construction (`TypeName { field: value }`) is a general
        // expression, mirroring the runtime parser where it is a postfix on an
        // identifier primary (crates/harn-parser parse loop +
        // is_struct_construct_lookahead). Keeping it here — rather than only in
        // binding initializers and call arguments — lets `return Point {..}`,
        // ternary arms, and list/dict elements parse. GLR disambiguates it from
        // a block via the `dict_literal` shape (`{ ident: ... }` or `{}`); a
        // block of statements is not a dict literal, so `if Foo { stmt }` still
        // reads `Foo` + block. See conflict `[$._primary, $.struct_construct]`.
        $.struct_construct,
        $._primary
      ),

    ternary_expression: ($) =>
      prec.right(2, seq($._expression, "?", $._expression, ":", $._expression)),

    // `??` binds tighter than `+ -` but looser than `* / %`, matching the
    // canonical parser (crates/harn-parser parse_nil_coalescing). Keeping the
    // tree-sitter precedence in sync ensures structural tools see the same
    // grouping the interpreter does, e.g. `a ?? b + c` is `(a ?? b) + c` and
    // `a ?? b * c` is `a ?? (b * c)`.
    nil_coalescing_expression: ($) =>
      prec.left(9, seq($._expression, repeat($._newline), "??", repeat($._newline), $._expression)),

    binary_expression: ($) =>
      choice(
        prec.left(4, seq($._expression, repeat($._newline), "||", repeat($._newline), $._expression)),
        prec.left(5, seq($._expression, repeat($._newline), "&&", repeat($._newline), $._expression)),
        prec.left(6, seq($._expression, repeat($._newline), choice("==", "!="), repeat($._newline), $._expression)),
        prec.left(7, seq($._expression, repeat($._newline), choice("<", ">", "<=", ">="), repeat($._newline), $._expression)),
        prec.left(7, seq($._expression, "in", $._expression)),
        prec.left(7, seq($._expression, "not", "in", $._expression)),
        prec.left(8, seq($._expression, repeat($._newline), "+", repeat($._newline), $._expression)),
        prec.left(8, seq($._expression, "-", $._expression)),
        prec.left(10, seq($._expression, repeat($._newline), "*", repeat($._newline), $._expression)),
        prec.left(10, seq($._expression, repeat($._newline), "/", repeat($._newline), $._expression)),
        prec.left(10, seq($._expression, repeat($._newline), "%", repeat($._newline), $._expression)),
        // `**` binds tighter than a unary prefix on its left operand, so
        // `-2 ** 2` is `-(2 ** 2)` (see unary_expression below at prec 11).
        prec.right(12, seq($._expression, repeat($._newline), "**", repeat($._newline), $._expression))
      ),

    call_expression: ($) =>
      prec.left(
        13,
        seq(
          field("function", choice(
            $._value_identifier,
            $.call_expression,
            $.property_access,
            $.subscript_expression,
            $.parenthesized_expression
          )),
          "(",
          repeat(lineBreak($)),
          optional($.argument_list),
          repeat(lineBreak($)),
          ")"
        )
      ),

    // Generic-call form `func<T, U>(args)`. Kept distinct from
    // `call_expression` so that adding generic-type arguments to a callable
    // does not statically out-prioritise binary `<` comparisons whose LHS
    // happens to be a callable expression (`i < 5`, `obj.x < 5`, `(i) < 5`).
    // The leading `<` is captured by the `type_arguments` rule via
    // `token.immediate("<")`, which means the generic-call form requires
    // the `<` to immediately follow the function with no whitespace —
    // matching how generic calls are written in real Harn corpora.
    generic_call_expression: ($) =>
      prec.left(
        13,
        seq(
          field("function", choice(
            $.identifier,
            $.property_access,
            $.subscript_expression,
            $.parenthesized_expression
          )),
          field("type_arguments", $.type_arguments),
          "(",
          repeat(lineBreak($)),
          optional($.argument_list),
          repeat(lineBreak($)),
          ")"
        )
      ),

    property_access: ($) =>
      prec.left(
        13,
        seq(
          field("object", $._expression),
          repeat($._newline),
          choice(".", "?."),
          field("property", choice($.identifier, $.keyword_identifier))
        )
      ),

    parenthesized_expression: ($) => seq("(", $._expression, ")"),

    true: (_) => "true",
